--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@lingui/react": "^2.7.0",
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.5",
+    "@lingui/cli": "^2.7.0",
+    "@lingui/macro": "^2.7.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-preset-expo": "^5.0.0"
   }
 }
