--- a/.linguirc
+++ b/.linguirc
@@ -1,5 +1,6 @@
 {
-   "localeDir": "src/locales/",
-   "srcPathDirs": ["src/"],
-   "format": "po"
+    "sourceLocale": "en",
+    "localeDir": "src/locales/",
+    "srcPathDirs": ["src/"],
+    "format": "minimal"
 }
