--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@lingui/react": "^2.7.0",
     "expo": "^31.0.2",
     "react": "16.5.0",
+    "react-intl": "^2.7.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz"
   },
   "devDependencies": {
